tried to fix pic error. shifted it to right. widened header. changed color.

--- a/repoFinderCSS.css
+++ b/repoFinderCSS.css
@@ -18,12 +18,13 @@ body {
 
 
 .header {
-	background-color: #152123;
+	background-color: #1E2628;
+
 
 }
 #header-logo {
-	margin-left: 0px;
-	height: auto;
+	margin-left: 190px;
+	height: 59px;
 	width: 50px;
 }
 
